# LILYGO-Spark-NG

./: Cargo.toml  README.md  build.rs  feature.md  hacking.md
.github/workflows/: build.yml
resources/: AppIcon.icns
src/: app.rs  i18n.rs  main.rs  manifest.rs  sidebar.rs  theme.rs
src/pages/: community.rs  discovery.rs  embedded_tools.rs  firmware_center.rs  firmware_lab.rs  mod.rs  serial_tools.rs  settings.rs  spark_lab.rs
